--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 .principal{
 	background: #CCCCCC;
-	padding: 30px;
+	padding: 40px;
 }
 
 .titulo-principal {
@@ -24,11 +24,11 @@ p {
 }
 
 #missao {
-	font-size: 20px
+	font-size: 30px
 }
 
 em strong {
-	color: #FF0000;
+	color: #F0FFF0;
 }
 
 .itens {
